--- a/week2.ipynb
+++ b/week2.ipynb
@@ -158,33 +158,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>53199</th>\n",
-       "      <td>22058525</td>\n",
-       "      <td>대신한의원</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "      <td>의료</td>\n",
-       "      <td>S01</td>\n",
-       "      <td>병원</td>\n",
-       "      <td>S01B06</td>\n",
-       "      <td>한의원</td>\n",
-       "      <td>Q86203</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2614011200100510001023077</td>\n",
-       "      <td>봄여름가을겨울아파트</td>\n",
-       "      <td>부산광역시 서구 보수대로 15</td>\n",
-       "      <td>602838.0</td>\n",
-       "      <td>49247.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>129.024457</td>\n",
-       "      <td>35.098349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66919</th>\n",
-       "      <td>26114791</td>\n",
-       "      <td>드림정형외과의원</td>\n",
+       "      <th>48693</th>\n",
+       "      <td>21778311</td>\n",
+       "      <td>윤영근내과</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "      <td>의료</td>\n",
@@ -194,40 +170,64 @@
        "      <td>내과/외과</td>\n",
        "      <td>Q86201</td>\n",
        "      <td>...</td>\n",
-       "      <td>2917010900103570002000001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>광주광역시 북구 북문대로 117</td>\n",
-       "      <td>500170.0</td>\n",
-       "      <td>61256.0</td>\n",
+       "      <td>1129013600100160016017041</td>\n",
+       "      <td>새서울신용협동조합</td>\n",
+       "      <td>서울특별시 성북구 화랑로 95</td>\n",
+       "      <td>136130.0</td>\n",
+       "      <td>2751.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>126.874567</td>\n",
-       "      <td>35.179661</td>\n",
+       "      <td>127.042428</td>\n",
+       "      <td>37.603268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34958</th>\n",
-       "      <td>27317875</td>\n",
-       "      <td>이태원안과</td>\n",
+       "      <th>17465</th>\n",
+       "      <td>21124609</td>\n",
+       "      <td>서울본정형외과</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "      <td>의료</td>\n",
        "      <td>S01</td>\n",
        "      <td>병원</td>\n",
-       "      <td>S01B13</td>\n",
-       "      <td>안과의원</td>\n",
+       "      <td>S01B07</td>\n",
+       "      <td>내과/외과</td>\n",
        "      <td>Q86201</td>\n",
        "      <td>...</td>\n",
-       "      <td>1168010100108200010023946</td>\n",
-       "      <td>GLASSTOWER</td>\n",
-       "      <td>서울특별시 강남구 강남대로 406</td>\n",
-       "      <td>135080.0</td>\n",
-       "      <td>6134.0</td>\n",
+       "      <td>4613011500108740001020696</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>전라남도 여수시 신월로 735</td>\n",
+       "      <td>550819.0</td>\n",
+       "      <td>59756.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>601</td>\n",
-       "      <td>127.027612</td>\n",
-       "      <td>37.498932</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127.720730</td>\n",
+       "      <td>34.736014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69859</th>\n",
+       "      <td>24997826</td>\n",
+       "      <td>연세스타안과</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>의료</td>\n",
+       "      <td>S01</td>\n",
+       "      <td>병원</td>\n",
+       "      <td>S01B07</td>\n",
+       "      <td>내과/외과</td>\n",
+       "      <td>Q86201</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1171010500101740007009726</td>\n",
+       "      <td>태문빌딩</td>\n",
+       "      <td>서울특별시 송파구 백제고분로 365</td>\n",
+       "      <td>138844.0</td>\n",
+       "      <td>5616.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127.106284</td>\n",
+       "      <td>37.505257</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -235,25 +235,25 @@
        "</div>"
       ],
       "text/plain": [
-       "         상가업소번호       상호명  지점명 상권업종대분류코드 상권업종대분류명 상권업종중분류코드 상권업종중분류명  \\\n",
-       "53199  22058525     대신한의원  NaN         S       의료       S01       병원   \n",
-       "66919  26114791  드림정형외과의원  NaN         S       의료       S01       병원   \n",
-       "34958  27317875     이태원안과  NaN         S       의료       S01       병원   \n",
+       "         상가업소번호      상호명  지점명 상권업종대분류코드 상권업종대분류명 상권업종중분류코드 상권업종중분류명 상권업종소분류코드  \\\n",
+       "48693  21778311    윤영근내과  NaN         S       의료       S01       병원    S01B07   \n",
+       "17465  21124609  서울본정형외과  NaN         S       의료       S01       병원    S01B07   \n",
+       "69859  24997826   연세스타안과  NaN         S       의료       S01       병원    S01B07   \n",
        "\n",
-       "      상권업종소분류코드 상권업종소분류명 표준산업분류코드  ...                     건물관리번호         건물명  \\\n",
-       "53199    S01B06      한의원   Q86203  ...  2614011200100510001023077  봄여름가을겨울아파트   \n",
-       "66919    S01B07    내과/외과   Q86201  ...  2917010900103570002000001         NaN   \n",
-       "34958    S01B13     안과의원   Q86201  ...  1168010100108200010023946  GLASSTOWER   \n",
+       "      상권업종소분류명 표준산업분류코드  ...                     건물관리번호        건물명  \\\n",
+       "48693    내과/외과   Q86201  ...  1129013600100160016017041  새서울신용협동조합   \n",
+       "17465    내과/외과   Q86201  ...  4613011500108740001020696        NaN   \n",
+       "69859    내과/외과   Q86201  ...  1171010500101740007009726       태문빌딩   \n",
        "\n",
-       "                    도로명주소     구우편번호    신우편번호  동정보  층정보  호정보          경도  \\\n",
-       "53199    부산광역시 서구 보수대로 15  602838.0  49247.0  NaN  NaN  NaN  129.024457   \n",
-       "66919   광주광역시 북구 북문대로 117  500170.0  61256.0  NaN    2  NaN  126.874567   \n",
-       "34958  서울특별시 강남구 강남대로 406  135080.0   6134.0  NaN  NaN  601  127.027612   \n",
+       "                     도로명주소     구우편번호    신우편번호  동정보  층정보  호정보          경도  \\\n",
+       "48693     서울특별시 성북구 화랑로 95  136130.0   2751.0  NaN    2  NaN  127.042428   \n",
+       "17465     전라남도 여수시 신월로 735  550819.0  59756.0  NaN  NaN  NaN  127.720730   \n",
+       "69859  서울특별시 송파구 백제고분로 365  138844.0   5616.0  NaN    5  NaN  127.106284   \n",
        "\n",
        "              위도  \n",
-       "53199  35.098349  \n",
-       "66919  35.179661  \n",
-       "34958  37.498932  \n",
+       "48693  37.603268  \n",
+       "17465  34.736014  \n",
+       "69859  37.505257  \n",
        "\n",
        "[3 rows x 39 columns]"
       ]
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "Name: 시도명, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "[3 rows x 39 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
        "<AxesSubplot: xlabel='count', ylabel='시도명'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
