--- a/week3.ipynb
+++ b/week3.ipynb
@@ -2,6 +2,552 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# 한글폰트 사용을 위해 설치\n",
+    "# 아래 모듈을 설치하고 불러오면 별도의 한글폰트 설정이 필요 없습니다.\n",
+    "# colab 에서도 아래 설치 문구의 주석을 제거하고 설치하고 import 해주기만 하면 한글폰트가 잘 나옵니다.\n",
+    "# !pip install koreanize-matplotlib\n",
+    "\n",
+    "import koreanize_matplotlib\n",
+    "\n",
+    "# df = pd.read_csv(\"boostcourse-ds-510/data/NHIS_OPEN_GJ_2017.CSV.zip\", encoding=\"cp949\")\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/corazzon/boostcourse-ds-510/master/data/NHIS_OPEN_GJ_2017.CSV.zip\",\n",
+    "                 encoding=\"cp949\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q1. 연령대별 허리둘레에 대한 기술통계를 구하려고 합니다. 다음 제공되는 딕셔너리를 통해 연령대코드(5세단위)를 \"연령대\"로 만들고 아래와 같은 기술통계값을 구해주세요!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "딕셔너리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_code = {1: '0~4세',\n",
+    " 2: '5~9세',\n",
+    " 3: '10~14세',\n",
+    " 4: '15~19세',\n",
+    " 5: '20~24세',\n",
+    " 6: '25~29세',\n",
+    " 7: '30~34세',\n",
+    " 8: '35~39세',\n",
+    " 9: '40~44세',\n",
+    " 10: '45~49세',\n",
+    " 11: '50~54세',\n",
+    " 12: '55~59세',\n",
+    " 13: '60~64세',\n",
+    " 14: '65~69세',\n",
+    " 15: '70~74세',\n",
+    " 16: '75~79세',\n",
+    " 17: '80~84세',\n",
+    " 18: '85세+'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연령대코드(5세단위)의 값을 age_code로 대체하고,\n",
+    "# 컬럼명을 연령대로 변경\n",
+    "df1= df.replace({'연령대코드(5세단위)':age_code}).rename(columns={'연령대코드(5세단위)':'연령대'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>연령대</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20~24세</th>\n",
+       "      <td>23244.0</td>\n",
+       "      <td>75.152220</td>\n",
+       "      <td>12.251781</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25~29세</th>\n",
+       "      <td>64898.0</td>\n",
+       "      <td>77.704783</td>\n",
+       "      <td>16.735734</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30~34세</th>\n",
+       "      <td>77517.0</td>\n",
+       "      <td>81.089268</td>\n",
+       "      <td>22.988111</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>80.1</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35~39세</th>\n",
+       "      <td>84621.0</td>\n",
+       "      <td>82.094012</td>\n",
+       "      <td>14.522095</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40~44세</th>\n",
+       "      <td>130912.0</td>\n",
+       "      <td>80.488308</td>\n",
+       "      <td>10.803098</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45~49세</th>\n",
+       "      <td>118357.0</td>\n",
+       "      <td>80.822449</td>\n",
+       "      <td>9.521622</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>137.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50~54세</th>\n",
+       "      <td>129833.0</td>\n",
+       "      <td>81.062754</td>\n",
+       "      <td>9.095438</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55~59세</th>\n",
+       "      <td>112175.0</td>\n",
+       "      <td>81.799905</td>\n",
+       "      <td>8.730398</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>87.5</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60~64세</th>\n",
+       "      <td>106491.0</td>\n",
+       "      <td>82.722769</td>\n",
+       "      <td>8.596176</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>137.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65~69세</th>\n",
+       "      <td>53624.0</td>\n",
+       "      <td>83.588500</td>\n",
+       "      <td>8.443542</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70~74세</th>\n",
+       "      <td>51586.0</td>\n",
+       "      <td>84.063372</td>\n",
+       "      <td>8.539639</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>129.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75~79세</th>\n",
+       "      <td>25972.0</td>\n",
+       "      <td>84.200127</td>\n",
+       "      <td>8.772306</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>122.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80~84세</th>\n",
+       "      <td>16205.0</td>\n",
+       "      <td>83.751435</td>\n",
+       "      <td>9.041091</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85세+</th>\n",
+       "      <td>4125.0</td>\n",
+       "      <td>81.736703</td>\n",
+       "      <td>17.325969</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           count       mean        std   min   25%   50%   75%    max\n",
+       "연령대                                                                  \n",
+       "20~24세   23244.0  75.152220  12.251781  47.5  67.5  73.4  81.0  999.0\n",
+       "25~29세   64898.0  77.704783  16.735734  48.0  69.0  76.5  84.2  999.0\n",
+       "30~34세   77517.0  81.089268  22.988111  49.0  72.0  80.1  88.0  999.0\n",
+       "35~39세   84621.0  82.094012  14.522095   9.2  75.0  82.0  89.0  999.0\n",
+       "40~44세  130912.0  80.488308  10.803098  42.1  73.0  80.0  87.0  999.0\n",
+       "45~49세  118357.0  80.822449   9.521622  40.0  74.0  81.0  87.0  137.0\n",
+       "50~54세  129833.0  81.062754   9.095438   6.5  75.0  81.0  87.0  142.0\n",
+       "55~59세  112175.0  81.799905   8.730398  32.0  76.0  82.0  87.5  139.0\n",
+       "60~64세  106491.0  82.722769   8.596176   0.0  77.0  83.0  88.0  137.0\n",
+       "65~69세   53624.0  83.588500   8.443542  50.0  78.0  83.5  89.0  129.0\n",
+       "70~74세   51586.0  84.063372   8.539639  51.0  78.0  84.0  90.0  129.8\n",
+       "75~79세   25972.0  84.200127   8.772306  50.0  78.0  84.0  90.0  122.0\n",
+       "80~84세   16205.0  83.751435   9.041091  38.0  78.0  84.0  90.0  120.0\n",
+       "85세+      4125.0  81.736703  17.325969  34.0  75.0  81.5  88.0  999.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 연령대별 허리둘레에 대한 기술통계 by groupby\n",
+    "df1.groupby(['연령대'])['허리둘레'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>count</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>min</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>연령대</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20~24세</th>\n",
+       "      <td>67.5</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>23244.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>75.152220</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>12.251781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25~29세</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>64898.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>77.704783</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>16.735734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30~34세</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>80.1</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>77517.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>81.089268</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>22.988111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35~39세</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>84621.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>82.094012</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>14.522095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40~44세</th>\n",
+       "      <td>73.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>130912.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>80.488308</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>10.803098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45~49세</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>118357.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>80.822449</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>9.521622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50~54세</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>129833.0</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>81.062754</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>9.095438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55~59세</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>87.5</td>\n",
+       "      <td>112175.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>81.799905</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>8.730398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60~64세</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>106491.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>82.722769</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.596176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65~69세</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>53624.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>83.588500</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>8.443542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70~74세</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>51586.0</td>\n",
+       "      <td>129.8</td>\n",
+       "      <td>84.063372</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>8.539639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75~79세</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>25972.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>84.200127</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>8.772306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80~84세</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>16205.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>83.751435</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>9.041091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85세+</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>4125.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>81.736703</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>17.325969</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         25%   50%   75%     count    max       mean   min        std\n",
+       "연령대                                                                  \n",
+       "20~24세  67.5  73.4  81.0   23244.0  999.0  75.152220  47.5  12.251781\n",
+       "25~29세  69.0  76.5  84.2   64898.0  999.0  77.704783  48.0  16.735734\n",
+       "30~34세  72.0  80.1  88.0   77517.0  999.0  81.089268  49.0  22.988111\n",
+       "35~39세  75.0  82.0  89.0   84621.0  999.0  82.094012   9.2  14.522095\n",
+       "40~44세  73.0  80.0  87.0  130912.0  999.0  80.488308  42.1  10.803098\n",
+       "45~49세  74.0  81.0  87.0  118357.0  137.0  80.822449  40.0   9.521622\n",
+       "50~54세  75.0  81.0  87.0  129833.0  142.0  81.062754   6.5   9.095438\n",
+       "55~59세  76.0  82.0  87.5  112175.0  139.0  81.799905  32.0   8.730398\n",
+       "60~64세  77.0  83.0  88.0  106491.0  137.0  82.722769   0.0   8.596176\n",
+       "65~69세  78.0  83.5  89.0   53624.0  129.0  83.588500  50.0   8.443542\n",
+       "70~74세  78.0  84.0  90.0   51586.0  129.8  84.063372  51.0   8.539639\n",
+       "75~79세  78.0  84.0  90.0   25972.0  122.0  84.200127  50.0   8.772306\n",
+       "80~84세  78.0  84.0  90.0   16205.0  120.0  83.751435  38.0   9.041091\n",
+       "85세+    75.0  81.5  88.0    4125.0  999.0  81.736703  34.0  17.325969"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pivot_table 로 기술통계 표현\n",
+    "df1.pivot_table(index='연령대',values='허리둘레',\n",
+    "               aggfunc='describe')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,10 +555,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "ml",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d2aed118ba8ff9785ef6f92976b2e0506450c277dc29b425301b195507d7b491"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
